improvement(CatalogTile): Removed truncation fade and fixed length (#3378)
* improvement(CatalogTile): Removed truncation fade per OpenShift request and added CSS to better trun

* Fix test

* Truncate more when footer; rename class

* Add refs

* update calculations to compute height

* Added refs to control description height more programmatically

* Update examples

* Update tests

* Remove console statements

* Update ref handling

* Address PR feedback

* Revert to CSS-based solution as refs were not performant

* Update snapshot

--- a/packages/patternfly-4/react-catalog-view-extension/src/components/CatalogTile/examples/catalogTile.css
+++ b/packages/patternfly-4/react-catalog-view-extension/src/components/CatalogTile/examples/catalogTile.css
@@ -39,19 +39,14 @@
   font-size: 16px;
   margin-left: 5px;
 }
-.ws-react-c-catalogtile .catalog-tile-pf-body .catalog-tile-pf-description span.truncated {
+.ws-react-c-catalogtile .catalog-tile-pf-body .catalog-tile-pf-description span {
+  display: -webkit-box;
   overflow: hidden;
-  position: relative;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
 }
-.ws-react-c-catalogtile .catalog-tile-pf-body .catalog-tile-pf-description span.truncated::after {
-  background: linear-gradient(to right, rgba(255, 255, 255, 0), white 75%);
-  bottom: 0;
-  color: transparent;
-  content: ".";
-  position: absolute;
-  right: 0;
-  width: 50%;
-  text-align: right;
+.ws-react-c-catalogtile .catalog-tile-pf-body .catalog-tile-pf-description span.has-footer {
+  -webkit-line-clamp: 1;
 }
 .ws-react-c-catalogtile .example-ok-icon {
   color: #4CB140;
